# rust-bucket

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  RUST_STYLE_GUIDE.md  STYLE_GUIDE.md  TESTING.md  WORKFLOW.md  WORKFLOW_CODING.md  WORKFLOW_JUDGE.md  WORKFLOW_REFLECTION.md  WORKFLOW_TIDY.md  deny.toml  justfile-rustbucket  ratchet-counts.toml  ratchet.toml  ratchets.toml  rust-bucket.toml  rustfmt.toml
.agents/skills/de-complect/: SKILL.md
.agents/skills/deburr-edge-cases/: SKILL.md
.agents/skills/release-to-crates/: SKILL.md
.beads/: config.yaml  issues.jsonl  last-touched
.claude/agents/: coding.md  coordinator.md  judge.md  reflection.md  tidy.md
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json
blueprint/wire-migration-path/: plan-wire-migration-path.md
migrations/: 0.2.0.md  0.3.0.md  0.4.0.md  0.5.0.md  0.6.0.md  0.7.0.md  0.9.0.md  0.9.4.md  0.9.5.md  0.9.8.md
src/: apply.rs  cli.rs  config.rs  generator.rs  lib.rs  main.rs  migrations.rs  show_migration.rs  templates.rs  upgrade.rs  verify.rs
templates/: AGENTS.md.liquid  CLAUDE.md.liquid  RUST_STYLE_GUIDE.md.liquid  STYLE_GUIDE.md.liquid  TESTING.md.liquid  WORKFLOW.md.liquid  WORKFLOW_CODING.md.liquid  WORKFLOW_JUDGE.md.liquid  WORKFLOW_REFLECTION.md.liquid  WORKFLOW_TIDY.md.liquid  cargo-generate.toml  deny.toml.liquid  justfile-rustbucket.liquid  rustfmt.toml.liquid
templates/.beads/: config.yaml.liquid
templates/.claude/agents/: coding.md.liquid  coordinator.md.liquid  judge.md.liquid  reflection.md.liquid  tidy.md.liquid
templates/.config/: nextest.toml.liquid
templates/.devcontainer/: Dockerfile.liquid  devcontainer.json.liquid
tests/: integration.rs
(+3 files in other folders)
