[package]
name = "rust-bucket"
version = "0.6.1"
edition = "2024"
description = "Long-horizon agentic coding scaffold for Rust projects"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rust-embed = "8"
semver = "1"
thiserror = "2"
tempfile = "3"
liquid = "0.26"
walkdir = "2"
