[package]
name = "rust-bucket-cli"
version = "0.9.2"
edition = "2024"
description = "Long-horizon agentic coding scaffold for Rust projects"
license = "MIT"
repository = "https://github.com/imbue-ai/rust-bucket"
homepage = "https://github.com/imbue-ai/rust-bucket"
readme = "README.md"
keywords = ["agentic", "scaffold", "cli", "automation", "coding"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.95"

[lib]
name = "rust_bucket"
path = "src/lib.rs"

[[bin]]
name = "rust-bucket"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rust-embed = "8"
semver = "1"
thiserror = "2"
tempfile = "3"
liquid = "0.26"
walkdir = "2"
